// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal should render correctly 1`] = `
<BaseModal
  cancelText="Cancel"
  clickOutsite={true}
  closable={false}
  confirmText="Confirm"
  footer="default"
  handleClose={[Function]}
  onCancel={[Function]}
  onConfirm={[Function]}
  title=""
  visible={true}
  width={416}
>
  <React.Fragment>
    <Flex
      borderBottom="default"
      borderColor="gray.8"
      p="4"
    >
      <Box
        flex="auto"
      >
        <Heading.h3 />
      </Box>
    </Flex>
    <Flex
      flexDirection="column"
      p="4"
    />
    <Box
      borderColor="gray.8"
      borderTop="default"
      p="2"
    >
      <Footer
        cancelText="Cancel"
        confirmText="Confirm"
        handleClose={[Function]}
        onCancel={[Function]}
        onConfirm={[Function]}
      />
    </Box>
  </React.Fragment>
</BaseModal>
`;

exports[`Modal should render with props closeButton 1`] = `
<BaseModal
  cancelText="Cancel"
  clickOutsite={true}
  closable={true}
  confirmText="Confirm"
  footer="default"
  handleClose={[Function]}
  onCancel={[Function]}
  onConfirm={[Function]}
  title=""
  visible={true}
  width={416}
>
  <React.Fragment>
    <Flex
      borderBottom="default"
      borderColor="gray.8"
      p="4"
    >
      <Box
        flex="auto"
      >
        <Heading.h3 />
      </Box>
      <CloseButton
        handleClose={[Function]}
      />
    </Flex>
    <Flex
      flexDirection="column"
      p="4"
    />
    <Box
      borderColor="gray.8"
      borderTop="default"
      p="2"
    >
      <Footer
        cancelText="Cancel"
        confirmText="Confirm"
        handleClose={[Function]}
        onCancel={[Function]}
        onConfirm={[Function]}
      />
    </Box>
  </React.Fragment>
</BaseModal>
`;
